# ShmObjMgr

./: CMakeLists.txt  LICENSE  Makefile  README.md  enable_shm_pointer_from_this.h  log.h  main.cpp  obj_creator_mgr.h  shm_obj.h  shm_obj_mgr.h  shm_obj_test.h  shm_pointer.h  shm_pointer_count.cpp  shm_pool.cpp  shm_pool.h  singleton.h  system.cpp  system.h  weak_shm_pointer.h
example/shm_obj_test/: CMakeLists.txt  main.cpp  shm_obj_test.h
example/shm_pointer_test/: CMakeLists.txt  main.cpp  shm_obj_test.h
example/shm_pointer_v2_test/: CMakeLists.txt  main.cpp  shm_obj_test.h
inc/: log.h  singleton.h
inc/shm_obj/: obj_creator_mgr.h  shm_obj.h  shm_obj_mgr.h  shm_pool.h
inc/shm_obj_v2/: obj_creator_mgr.h  shm_obj.h  shm_obj_mgr.h  shm_pool.h
inc/shm_pointer/: shm_pointer.h  shm_pointer_count.h  weak_shm_pointer.h
inc/shm_pointer_v2/: enable_shm_pointer_from_this.h  shm_pointer.h  weak_shm_pointer.h
src/shm_obj/: CMakeLists.txt  obj_creator_mgr.cpp  shm_pool.cpp  system.cpp
src/shm_pointer/: CMakeLists.txt
